2013-02-15  Marc Glisse  <marc.glisse@inria.fr>

	* gmpxx.h (__GMPXX_DEFINE_ARITHMETIC_CONSTRUCTORS,
	__GMPXX_DEFINE_ARITHMETIC_ASSIGNMENTS): New macros.
	(mpz_class, mpq_class, mpf_class) [init_ui, init_si, init_d,
	assign_ui, assign_si, assign_d]: New functions.
	(__gmp_expr::__gmp_expr, __gmp_expr::operator=): Replace with macros.

2013-02-15 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* gmp-impl.h (NEG_CAST, ABS_CAST): Use __GMP_CAST.
	* mpz/fits_s.h: Use NEG_CAST.

2013-02-14  Marc Glisse  <marc.glisse@inria.fr>

	* gmpxx.h (__gmp_binary_greater): Forward to __gmp_binary_less.
	(__gmp_binary_equal): Forward to itself after swapping operands.

2013-02-14 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mp_dv_tab.c (__gmp_digit_value_tab): Remove a line of unused values.
	* mpf/set_str.c: Update offset accordingly.
	* mpz/inp_str.c: Likewise.
	* mpz/set_str.c: Likewise.

	* gmp-h.in (mpq_cmp_ui): Optimise comparison with 1/1.
	* tests/mpq/t-cmp_ui.c: Test special comparisons: 0/1, 1/1.

	* mpz/clrbit.c: Reorganise branches.
	* mpz/setbit.c: Likewise.
	* mpz/combit.c: Same micro-optimisations as in set/clr.

	* mpz/aors_ui.h: No realloc if size was zero.
	* mpz/ior.c: Use macros: MPZ_REALLOC and MPN_INCR_U.

	* gmp-impl.h (NEG_CAST): New macro, used by ABS_CAST.
	* mpq/cmp_si.c: Use NEG_CAST.
	* mpz/cmp_si.c: Reorganise branches.

2013-02-13  Torbjorn Granlund  <tege@gmplib.org>

	* acinclude.m4 (GMP_ASM_X86_MULX, GMP_ASM_X86_ADOX): New feature tests.
	* configure.ac: Use new feature tests.

	* mpn/x86_64/haswell/mulx/mul_1.asm: File moved to cope with older
	assemblers.
	* configure.ac: Update haswell path to include "mulx".

2013-02-12  Torbjorn Granlund  <tege@gmplib.org>

	* configure.ac: Recognise haswell.
	* config.guess: Recognise haswell.
	* config.sub: Match haswell.

	* mpn/x86_64/haswell/mul_1.asm: New file, mainly for testing HNI.

2013-02-12 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* gmp-impl.h (MPZ_PROVOKE_REALLOC): Remove unused macro.